<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    tools:context=".ui.settings.SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_language"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/language"
            android:src="@drawable/ic_translate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/language"
            app:layout_constraintStart_toEndOf="@+id/iv_language"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/poppins_light"
            android:text="@string/change"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tv_language"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_alarm"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/alarm"
            android:src="@drawable/ic_bell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_language" />

        <TextView
            android:id="@+id/tv_reminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/reminder"
            app:layout_constraintStart_toEndOf="@+id/iv_alarm"
            app:layout_constraintTop_toBottomOf="@id/tv_language" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_daily_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/tv_reminder"
            app:layout_constraintTop_toBottomOf="@id/tv_language" />

    </LinearLayout>


</LinearLayout>