<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="35dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/name_tag"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_tag2"
                style="@style/MainText.ProfileTag"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/MainText.ProfileFill"
                android:layout_marginStart="24dp"
                android:text="@string/name" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/company_tag"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"

                android:contentDescription="@string/company"
                android:src="@drawable/ic_company" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/company_tag2"
                style="@style/MainText.ProfileTag"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/company" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/MainText.ProfileFill"
                android:layout_marginStart="24dp"
                android:text="@string/company" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/location_tag"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/location"
                android:src="@drawable/ic_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_tag2"
                style="@style/MainText.ProfileTag"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/MainText.ProfileFill"
                android:layout_marginStart="24dp"
                android:text="@string/location" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>